// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton default 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c1 {
  box-sizing: border-box;
  padding: 0;
  position: absolute;
  z-index: -1;
  opacity: 0;
  overflow: visible;
}

.c2 {
  display: inline-block;
  box-sizing: border-box;
  color: #818994;
  width: 1.125rem;
  border-radius: 50%;
  height: 1.125rem;
  background-color: #fff;
  border: 1px solid #e1e5eb;
  -webkit-transition: all 250ms cubic-bezier(0.27,0.01,0.38,1.06);
  transition: all 250ms cubic-bezier(0.27,0.01,0.38,1.06);
  box-shadow: none;
}

input:checked + .c2 {
  border: 5px solid #007bff;
}

input[type='radio'][|checked][disabled] + .c2 {
  background-color: #818994;
  border: 5px solid #e9ecef;
}

input:disabled + .c2 {
  background-color: #e9ecef;
}

.c3 {
  margin-left: 5px;
  color: #5a6169;
}

input:disabled ~ .c3 {
  color: #818994;
}

<label
  class="c0"
>
  <input
    class="c1"
    type="radio"
  />
  <span
    class="c2"
  />
  <span
    class="c3"
  >
    radio
  </span>
</label>
`;

exports[`RadioButton defaultChecked 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c1 {
  box-sizing: border-box;
  padding: 0;
  position: absolute;
  z-index: -1;
  opacity: 0;
  overflow: visible;
}

.c2 {
  display: inline-block;
  box-sizing: border-box;
  color: #818994;
  width: 1.125rem;
  border-radius: 50%;
  height: 1.125rem;
  background-color: #fff;
  border: 1px solid #e1e5eb;
  -webkit-transition: all 250ms cubic-bezier(0.27,0.01,0.38,1.06);
  transition: all 250ms cubic-bezier(0.27,0.01,0.38,1.06);
  box-shadow: none;
}

input:checked + .c2 {
  border: 5px solid #007bff;
}

input[type='radio'][|checked][disabled] + .c2 {
  background-color: #818994;
  border: 5px solid #e9ecef;
}

input:disabled + .c2 {
  background-color: #e9ecef;
}

.c3 {
  margin-left: 5px;
  color: #5a6169;
}

input:disabled ~ .c3 {
  color: #818994;
}

<label
  class="c0"
>
  <input
    checked=""
    class="c1"
    type="radio"
  />
  <span
    class="c2"
  />
  <span
    class="c3"
  >
    radio
  </span>
</label>
`;

exports[`RadioButton disabled 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
}

.c1 {
  box-sizing: border-box;
  padding: 0;
  position: absolute;
  z-index: -1;
  opacity: 0;
  overflow: visible;
}

.c2 {
  display: inline-block;
  box-sizing: border-box;
  color: #818994;
  width: 1.125rem;
  border-radius: 50%;
  height: 1.125rem;
  background-color: #fff;
  border: 1px solid #e1e5eb;
  -webkit-transition: all 250ms cubic-bezier(0.27,0.01,0.38,1.06);
  transition: all 250ms cubic-bezier(0.27,0.01,0.38,1.06);
  box-shadow: none;
}

input:checked + .c2 {
  border: 5px solid #007bff;
}

input[type='radio'][|checked][disabled] + .c2 {
  background-color: #818994;
  border: 5px solid #e9ecef;
}

input:disabled + .c2 {
  background-color: #e9ecef;
}

.c3 {
  margin-left: 5px;
  color: #5a6169;
}

input:disabled ~ .c3 {
  color: #818994;
}

<label
  class="c0"
  disabled=""
>
  <input
    class="c1"
    disabled=""
    type="radio"
  />
  <span
    class="c2"
  />
  <span
    class="c3"
  >
    radio
  </span>
</label>
`;

exports[`RadioButton disabled defaultChecked 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
}

.c1 {
  box-sizing: border-box;
  padding: 0;
  position: absolute;
  z-index: -1;
  opacity: 0;
  overflow: visible;
}

.c2 {
  display: inline-block;
  box-sizing: border-box;
  color: #818994;
  width: 1.125rem;
  border-radius: 50%;
  height: 1.125rem;
  background-color: #fff;
  border: 1px solid #e1e5eb;
  -webkit-transition: all 250ms cubic-bezier(0.27,0.01,0.38,1.06);
  transition: all 250ms cubic-bezier(0.27,0.01,0.38,1.06);
  box-shadow: none;
}

input:checked + .c2 {
  border: 5px solid #007bff;
}

input[type='radio'][|checked][disabled] + .c2 {
  background-color: #818994;
  border: 5px solid #e9ecef;
}

input:disabled + .c2 {
  background-color: #e9ecef;
}

.c3 {
  margin-left: 5px;
  color: #5a6169;
}

input:disabled ~ .c3 {
  color: #818994;
}

<label
  class="c0"
  disabled=""
>
  <input
    checked=""
    class="c1"
    disabled=""
    type="radio"
  />
  <span
    class="c2"
  />
  <span
    class="c3"
  >
    radio
  </span>
</label>
`;
